--- a/Ziplock/contact.html
+++ b/Ziplock/contact.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Zip Lock - О компании</title>
+	<title>Zip Lock - Контакты</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -153,7 +153,7 @@
 	<section class="start-section mt-5" data-aos="fade-up" data-aos-duration="800">
 		<div class="content-container">
 			<!-- Box -->
-			<div class="start-section__box w-100" style="background-image: url('img/start-section-contact.png');">
+			<div class="start-section__box w-100">
 				<!-- Top -->
 				<div class="start-section__top d-flex">
 					<!-- Title -->
@@ -177,8 +177,12 @@
 			</div>
 
             <style>
+				.start-section__box:before {
+					background-image: url('img/start-section-contact.png');
+				}
+
                 @media (max-width: 576px) {
-                    .start-section__box {
+                    .start-section__box::before {
                         background-image: url('img/start-section-contact-mobile.png') !important;
                     }
                 }
