--- a/Ziplock/index.html
+++ b/Ziplock/index.html
@@ -151,7 +151,7 @@
 			<div class="row align-items-end">
 				<div class="col-lg-6 mt-lg-0 mt-3" data-aos="fade-right" data-aos-duration="800">
 					<!-- Pocket -->
-					<div class="pocket" style="background-image: url('https://smokeskiller.github.io/Ziplock/img/pocket-bg3.png');">
+					<div class="pocket">
 						<div class="pocket__box">
 							<img src="img/main.png" class="start-banner-main__img">
 						</div>
@@ -160,6 +160,12 @@
 							<a href="zip.html" class="pocket-bottom__btn btn">ПРАЙС ЛИСТ</a>
 						</div>
 					</div>
+
+					<style>
+						.pocket:before {
+							background-image: url('https://smokeskiller.github.io/Ziplock/img/pocket-bg3.png');
+						}
+					</style>
 				</div>
 
 				<div class="col-lg-6 mb-sm-5 mb-4" data-aos="fade-left" data-aos-duration="800">
