--- a/Ziplock/logo.html
+++ b/Ziplock/logo.html
@@ -279,7 +279,7 @@
 			<div class="row mt-2">
                 <div class="col-lg-6" data-aos="flip-left" data-aos-duration="800">
 					<!-- Pocket -->
-					<div class="pocket pocket-reverse" style="background-image: url('/img/pocket-bg2.png');">
+					<div class="pocket pocket-reverse" style="background-image: url('https://smokeskiller.github.io/Ziplock/img/pocket-bg2.png');">
 						<div class="pocket__box">
 							<img src="img/termo.png" class="pocket__img">
 						</div>
@@ -299,7 +299,7 @@
 
 				<div class="col-lg-6 mt-lg-0 mt-2" data-aos="flip-right" data-aos-duration="800">
 					<!-- Pocket -->
-					<div class="pocket pocket-reverse" style="background-image: url('/img/pocket-bg2.png');">
+					<div class="pocket pocket-reverse" style="background-image: url('https://smokeskiller.github.io/Ziplock/img/pocket-bg2.png');">
 						<div class="pocket__box">
 							<img src="img/zip.png" class="pocket__img">
 						</div>
