--- a/Kitchen/index.html
+++ b/Kitchen/index.html
@@ -18,7 +18,7 @@
 	<!-- Montserrat font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 	<!-- Main styles -->
 	<link rel="stylesheet" href="css/main.min.css">
@@ -42,13 +42,13 @@
 					<!-- PC: Menu -->
 					<menu class="header-nav-pc-menu">
 						<!-- Item -->
-						<li class="header-nav-pc-menu__item"><a href="#catalog">Каталог</a></li>
+						<li class="header-nav-pc-menu__item"><a href="#catalog" class="scroll-to-link">Каталог</a></li>
 
 						<!-- Item -->
-						<li class="header-nav-pc-menu__item"><a href="#about">О компании</a></li>
+						<li class="header-nav-pc-menu__item"><a href="#about" class="scroll-to-link">О компании</a></li>
 
 						<!-- Item -->
-						<li class="header-nav-pc-menu__item"><a href="#catalog">Связаться</a></li>
+						<li class="header-nav-pc-menu__item"><a href="#feedback" class="scroll-to-link">Связаться</a></li>
 					</menu>
 
 					<!-- Mobile box -->
@@ -67,24 +67,24 @@
 							<!-- Mobile menu -->
 							<menu class="header-nav-mobile-menu mt-4">
 								<!-- Item -->
-								<li class="header-nav-mobile-menu__item"><a href="#catalog">Каталог</a></li>
+								<li class="header-nav-mobile-menu__item"><a href="#catalog" class="scroll-to-link">Каталог</a></li>
 
 								<!-- Item -->
-								<li class="header-nav-mobile-menu__item"><a href="#about">О компании</a></li>
+								<li class="header-nav-mobile-menu__item"><a href="#about" class="scroll-to-link">О компании</a></li>
 
 								<!-- Item -->
-								<li class="header-nav-mobile-menu__item"><a href="#faq">FAQ</a></li>
+								<li class="header-nav-mobile-menu__item"><a href="#faq" class="scroll-to-link">FAQ</a></li>
 
 								<!-- Item -->
-								<li class="header-nav-mobile-menu__item"><a href="#feedback">Онлайн дизайн-проект</a></li>
+								<li class="header-nav-mobile-menu__item"><a href="#feedback" class="scroll-to-link">Онлайн дизайн-проект</a></li>
 
 								<!-- Item -->
-								<li class="header-nav-mobile-menu__item"><a href="#contact">Связаться</a></li>
+								<li class="header-nav-mobile-menu__item"><a href="#contact" class="scroll-to-link">Связаться</a></li>
 							</menu>
 						</div>
 
 						<!-- Social links -->
-						<div class="social-links d-flex">
+						<div class="social-links d-flex mt-4">
 							<!-- Item -->
 							<a href="#" class="social-links__item"><i class="fa-brands fa-instagram"></i></a>
 
@@ -111,7 +111,7 @@
 	<div class="top-empty-space"></div>
 
 	<!-- Section A -->
-	<section class="section-a mt-5">
+	<section class="section-a mt-5" id="main">
 		<div class="container">
 			<!-- Top row -->
 			<div class="row align-items-lg-end flex-lg-row flex-column">
@@ -3895,10 +3895,10 @@
 
 					<!-- Column -->
 					<div class="col-xl-3 col-lg-4 col-12 d-flex flex-column mt-4">
-						<a href="#" class="footer__link">Главная</a>
-						<a href="#catalog" class="footer__link mt-2">Каталог</a>
-						<a href="#faq" class="footer__link mt-2">FAQ</a>
-						<a href="#feedback" class="footer__link mt-2">Онлайн дизайн-проект</a>
+						<a href="#main" class="footer__link scroll-to-link">Главная</a>
+						<a href="#catalog" class="footer__link scroll-to-link mt-2">Каталог</a>
+						<a href="#faq" class="footer__link scroll-to-link mt-2">FAQ</a>
+						<a href="#feedback" class="footer__link scroll-to-link mt-2">Онлайн дизайн-проект</a>
 					</div>
 
 					<!-- Column -->
