--- a/Kitchen/index.html
+++ b/Kitchen/index.html
@@ -4101,7 +4101,7 @@
 						<span class="modal-card-box__price mt-1 d-block">от 238 900₽</span>
 
 						<!-- Btn -->
-						<button class="modal-card-box__btn btn mt-lg-5 mt-4">Рассчитать стоимость</button>
+						<button class="modal-card-box__btn btn mt-lg-5 mt-4 open-modal-btn" target="get-price">Рассчитать стоимость</button>
 					</div>
 				</div>
 
