--- a/Kitchen/index.html
+++ b/Kitchen/index.html
@@ -3119,7 +3119,7 @@
 						<h3 class="section-e-content__title order-lg-2 order-1">Хотите получить схему по электрике бесплатно?</h3>
 
 						<!-- Button -->
-						<button class="btn section-e-content__btn order-3 mt-4">Оставить заявку</button>
+						<button class="btn section-e-content__btn order-3 mt-4 open-modal-btn" target="get-price">Оставить заявку</button>
 					</div>
 				</div>
 
@@ -3134,7 +3134,7 @@
 						<h3 class="section-e-content__title order-lg-2 order-1">Хотите получить 3D дизайн проект за 2 минуты?</h3>
 
 						<!-- Button -->
-						<button class="btn section-e-content__btn order-3 mt-4">Оставить заявку</button>
+						<button class="btn section-e-content__btn order-3 mt-4 open-modal-btn" target="get-price">Оставить заявку</button>
 					</div>
 
 					<!-- Column & Stages -->
