--- a/Kitchen/index.html
+++ b/Kitchen/index.html
@@ -118,20 +118,20 @@
 				<!-- Column -->
 				<div class="col-lg-7">
 					<!-- Section title -->
-					<h2 class="section-title">Качественные кухни от производителя в Москве</h2>
+					<h2 class="section-title" data-aos="fade-right">Качественные кухни от производителя в Москве</h2>
 				</div>
 
 				<!-- Column -->
 				<div class="col-lg-5">
 					<!-- Text -->
-					<p class="section-a__text mb-lg-2">Более 10 лет мы создаем кухни, которые становятся сердцем вашего дома. Доверьтесь профессионалам!</p>
+					<p class="section-a__text mb-lg-2" data-aos="fade-left">Более 10 лет мы создаем кухни, которые становятся сердцем вашего дома. Доверьтесь профессионалам!</p>
 				</div>
 			</div>
 
 			<!-- Bottom row -->
 			<div class="row justify-content-between align-items-center mt-lg-5 mt-4">
 				<!-- Column:content -->
-				<div class="col-xl-5 d-flex flex-lg-column justify-content-between align-items-xl-start">
+				<div class="col-xl-5 d-flex flex-lg-column justify-content-between align-items-xl-start"  data-aos="fade-right">
 					<!-- Snake block -->
 					<div class="section-a-snake-block">
 						<!-- Title -->
@@ -166,7 +166,7 @@
 				</div>
 
 				<!-- Column:slider -->
-				<div class="col-xl-7 mt-xl-0 mt-4 ov-h">
+				<div class="col-xl-7 mt-xl-0 mt-4 ov-h" data-aos="fade-down">
 					<!-- Vertical gallery -->
 					<div class="vertical-gallery">
 						<!-- Wrapper -->
@@ -234,10 +234,10 @@
 	<section class="section-b mt-5">
 		<div class="container">
 			<!-- Section title -->
-			<h2 class="section-title">Дизайн кухни от искусственного интеллекта</h2>
+			<h2 class="section-title" data-aos="fade-right">Дизайн кухни от искусственного интеллекта</h2>
 
 			<!-- Section text -->
-			<p class="section-text mt-3">
+			<p class="section-text mt-3" data-aos="fade-right">
 				— как работа профессионала, но мгновенно и бесплатно 
 				<br>
 				Просто ответьте на 4 вопроса!
@@ -246,7 +246,7 @@
 			<!-- Row -->
 			<div class="row align-items-center mt-lg-3 mt-4">
 				<!-- Column -->
-				<div class="col-xl-5">
+				<div class="col-xl-5" data-aos="slide-right">
 					<!-- Content item -->
 					<div class="section-b-content-item">
 						<!-- Title -->
@@ -284,11 +284,11 @@
 					</div>
 
 					<!-- Button -->
-					<button class="btn section-b__btn open-modal-btn mt-5 d-lg-block d-none" target="get-quiz">Создать</button>
+					<button class="btn section-b__btn open-modal-btn mt-5 d-lg-block d-none" target="get-quiz-2">Создать</button>
 				</div>
 
 				<!-- Column -->
-				<div class="col-xl-7 mt-xl-0 mt-4 ov-h">
+				<div class="col-xl-7 mt-xl-0 mt-4 ov-h" data-aos="slide-left">
 					<!-- Slider -->
 					<div class="section-b-slider">
 						<!-- Item -->
@@ -383,7 +383,7 @@
 					</div>
 
 					<!-- Button -->
-					<button class="btn section-b__btn open-modal-btn mt-5 d-lg-none d-block" target="get-quiz">Создать</button>
+					<button class="btn section-b__btn open-modal-btn mt-5 d-lg-none d-block" target="get-quiz-2">Создать</button>
 				</div>
 			</div>
 		</div>
@@ -395,10 +395,10 @@
 		<div class="container">
 			<div class="px-lg-0 px-3">
 				<!-- Section title -->
-				<h2 class="section-title">Кухня - как отдельная жизнь</h2>
+				<h2 class="section-title" data-aos="fade-right">Кухня - как отдельная жизнь</h2>
 
 				<!-- Section text -->
-				<p class="section-text mt-3">
+				<p class="section-text mt-3" data-aos="fade-left">
 					Ознакомтесь с элементами кухни, кликнув <br> на интересующую часть кухни
 				</p> 
 			</div>
@@ -406,7 +406,7 @@
 			<!-- Row -->
 			<div class="row mt-5 tabs">
 				<!-- Column -->
-				<div class="col-lg-5 px-lg-3 px-0">
+				<div class="col-lg-5 px-lg-3 px-0" data-aos="fade-right">
 					<!-- Tabs -->
 					<div class="section-c-tabs">
 						<!-- Pointer -->
@@ -459,7 +459,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7 mt-lg-0 mt-4 px-lg-3 px-0">
+				<div class="col-lg-7 mt-lg-0 mt-4 px-lg-3 px-0" data-aos="fade-left">
 					<!-- Tabs content -->
 					<div class="section-c-tabs-content">
 						<!-- Item -->
@@ -484,13 +484,13 @@
 		<!-- Container -->
 		<div class="container tabs">
 			<!-- Section title -->
-			<h2 class="section-title">Каталог</h2>
+			<h2 class="section-title" data-aos="fade-right">Каталог</h2>
 
 			<!-- Section text -->
-			<p class="section-text mt-3">У нас огромный выбор кухонь и собственное производство. Вы можете выбрать понравившую кухню и мы рассчитаем стоимость под ваши размеры.</p>
+			<p class="section-text mt-3" data-aos="fade-left">У нас огромный выбор кухонь и собственное производство. Вы можете выбрать понравившую кухню и мы рассчитаем стоимость под ваши размеры.</p>
 
 			<!-- Navigation tabs -->
-			<div class="section-d-nav-tabs d-flex mt-5">
+			<div class="section-d-nav-tabs d-flex mt-5" data-aos="fade-right">
 				<!-- Tab -->
 				<button class="section-d-nav-tabs__tab tab active" tab-target="section-d-tab1">Все</button>
 
@@ -505,7 +505,7 @@
 			</div>
 
 			<!-- Tabs content -->
-			<div class="section-d-tabs-content mt-3">
+			<div class="section-d-tabs-content mt-3" data-aos="fade-right">
 				<!-- Tab content & row -->
 				<div class="row g-sm-4 g-3 tab-content active" id="section-d-tab1">
 					<!-- Card -->
@@ -2967,7 +2967,7 @@
 				</div>
 			</div>
 
-			<div class="btn section-d__btn mt-5 open-modal-btn" target="get-catalog">Получить каталог</div>
+			<div class="btn section-d__btn mt-5 open-modal-btn" target="get-catalog" data-aos="fade-right">Получить каталог</div>
 		</div>
 	</section>
 
@@ -3127,8 +3127,13 @@
 				<div class="row flex-lg-row flex-column-reverse tab-content section-e-tab-content" id="section-e2">
 					<!-- Column & Content -->
 					<div class="col-lg-6 section-e-content mt-lg-0 mt-4">
-						<!-- Image -->
-						<div class="section-e-content__img order-lg-1 order-2 mt-lg-0 mt-3" style="background-image: url(img/section-e/b2.png);"></div>
+						<div class="d-flex justify-content-between w-100 order-lg-1 order-2 mt-lg-0 mt-3">
+							<!-- Image -->
+							<div class="section-e-content__img half" style="background-image: url(img/section-e/b3.jpg);"></div>
+
+							<!-- Image -->
+							<div class="section-e-content__img half" style="background-image: url(img/section-e/b4.jpg);"></div>
+						</div>
 
 						<!-- Title -->
 						<h3 class="section-e-content__title order-lg-2 order-1">Хотите получить 3D дизайн проект за 2 минуты?</h3>
@@ -3228,13 +3233,13 @@
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Title -->
-				<h3 class="section-g__title d-lg-none">Следите за нами <br> в социальных сетях</h3>
+				<h3 class="section-g__title d-lg-none" data-aos="fade-right">Следите за нами <br> в социальных сетях</h3>
 
 				<!-- Text -->
 				<p class="section-g__text d-lg-none my-3">Узнавайте первыми о новинках и скидках, участвуйте в розыгрышах</p>
 
 				<!-- Column -->
-				<div class="col-lg-5 col-4">
+				<div class="col-lg-5 col-4" data-aos="fade-right">
 					<!-- Title -->
 					<h3 class="section-g__title d-lg-block d-none">Следите за нами <br> в социальных сетях</h3>
 
@@ -3266,7 +3271,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-7 col-8">
+				<div class="col-lg-7 col-8" data-aos="fade-left">
 					<!-- Scroll -->
 					<div class="section-g-scroll">
 						<!-- Wrapper -->
@@ -3333,15 +3338,15 @@
 		<!-- Container -->
 		<div class="container">
 			<!-- Section title -->
-			<h2 class="section-title">О компании</h2>
+			<h2 class="section-title" data-aos="fade-right">О компании</h2>
 
 			<!-- Section text -->
-			<p class="section-text mt-3">M-mebel предлагает широкий выбор корпусной мебели высокого качества собственного производства. Мы уделяем большое внимание индивидуальному подходу к каждому клиенту. Команда профессионалов готова помочь вам воплотить в жизнь любые дизайнерские идеи и создать уютный и стильный интерьер</p>
+			<p class="section-text mt-3" data-aos="fade-right">M-mebel предлагает широкий выбор корпусной мебели высокого качества собственного производства. Мы уделяем большое внимание индивидуальному подходу к каждому клиенту. Команда профессионалов готова помочь вам воплотить в жизнь любые дизайнерские идеи и создать уютный и стильный интерьер</p>
 
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-lg-6 order-lg-1 order-2 d-flex justify-content-between flex-wrap section-about-video">
+				<div class="col-lg-6 order-lg-1 order-2 d-flex justify-content-between flex-wrap section-about-video" data-aos="fade-right">
 					<!-- Item -->
 					<div class="section-about-video-item" data-video="video/test1.mp4">
 						<!-- Image -->
@@ -3396,7 +3401,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-lg-6 order-lg-2 order-1 mt-lg-0 mt-4 section-about-content">
+				<div class="col-lg-6 order-lg-2 order-1 mt-lg-0 mt-4 section-about-content"  data-aos="fade-left">
 					<!-- Item -->
 					<div class="section-about-content-item">
 						<!-- Title -->
@@ -3447,13 +3452,13 @@
 	</section>
 
 	<!-- Section Feedback -->
-	<section class="section-feedback pb-5 mt-5" id="feedback">
+	<section class="section-feedback pb-5 mt-5" id="feedback" data-aos="zoom-in">
 		<!-- Container -->
 		<div class="container">
 			<!-- Row -->
 			<div class="row align-items-center justify-content-between section-feedback__row">
 				<!-- Column -->
-				<div class="col-xl-5 col-lg-6">
+				<div class="col-xl-5 col-lg-6" data-aos="fade-right">
 					<!-- Title -->
 					<h2 class="section-feedback__title">Рассчитаем стоимость онлайн</h2>
 
@@ -3483,7 +3488,7 @@
 	</section>
 
 	<!-- Section Reviews -->
-	<section class="section-reviews mt-5 pb-5">
+	<section class="section-reviews mt-5 pb-5" data-aos="fade-down">
 		<!-- Container -->
 		<div class="container">
 			<!-- Row -->
@@ -3728,11 +3733,11 @@
 	</section>
 
 	<!-- Section FAQ -->
-	<section class="section-faq mt-5 pb-5" id="faq">
+	<section class="section-faq mt-5 pb-5" id="faq" data-aos="fade-down">
 		<!-- Container -->
 		<div class="container">
 			<!-- Section title -->
-			<h2 class="section-title">FAQ</h2>
+			<h2 class="section-title" data-aos="fade-right">FAQ</h2>
 
 			<div class="mt-5 w-100">
 				<!-- Item -->
@@ -3822,12 +3827,12 @@
 	<section class="section-contact mt-5 pb-5" id="contact">
 		<div class="container">
 			<!-- Section title -->
-			<h2 class="section-title">Контакты</h2>
+			<h2 class="section-title" data-aos="fade-right">Контакты</h2>
 
 			<!-- Row -->
 			<div class="row align-items-center">
 				<!-- Column -->
-				<div class="col-xl-3 col-lg-4 mt-lg-0 mt-3">
+				<div class="col-xl-3 col-lg-4 mt-lg-0 mt-3" data-aos="fade-right">
 					<p class="section-contact__text">Адрес: г. Москва, Рязанский пр. д.2, корпус 3. ТЦ "ГОРОД" (4 этаж)</p>
 
 					<p class="section-contact__text mt-2">Телефон: <a href="tel: +7-937-448-88-86">+7-937-448-88-86</a></p>
@@ -3856,7 +3861,7 @@
 				</div>
 
 				<!-- Column -->
-				<div class="col-xl-9 col-lg-8 mt-lg-0 mt-3">
+				<div class="col-xl-9 col-lg-8 mt-lg-0 mt-3" data-aos="fade-left">
 					<!-- Map -->
 					<div class="section-contact__map" id="map"></div>
 				</div>
@@ -4030,6 +4035,25 @@
 			<!-- Box -->
 			<div class="modal-card-box">
 				<iframe src="https://api.ucalc.pro/api/161404" frameborder="0"></iframe>
+
+				<!-- Close modal button -->
+				<button class="modal-close-btn">
+					<div class="modal-close-btn__container">
+						<span></span>
+						<span></span>
+					</div>
+				</button>
+			</div>
+		</div>
+	</div>
+
+	<!-- Quiz 2 -->
+	<div class="modal" id="get-quiz-2">
+		<!-- Inner -->
+		<div class="modal-inner">
+			<!-- Box -->
+			<div class="modal-card-box">
+				<iframe src="https://moscow.kitchen-ai.ru/" frameborder="0"></iframe>
 
 				<!-- Close modal button -->
 				<button class="modal-close-btn">
