--- a/Kitchen/index.html
+++ b/Kitchen/index.html
@@ -3488,7 +3488,7 @@
 	</section>
 
 	<!-- Section Reviews -->
-	<section class="section-reviews mt-5 pb-5" data-aos="fade-down">
+	<section class="section-reviews mt-5 pb-5">
 		<!-- Container -->
 		<div class="container">
 			<!-- Row -->
@@ -3984,7 +3984,7 @@
 					<div class="d-flex justify-content-between flex-sm-row flex-column w-100 mt-sm-3 mt-1">
 						<!-- Whatsapp -->
 						<div class="d-flex align-items-center modal-form-checkbox mt-sm-0 mt-2">
-							<input type="checkbox" name="whatsapp-checkbox" id="whatsapp-checkbox" class="modal-form-checkbox__field">
+							<input type="radio" name="social-radio" id="whatsapp-checkbox" class="modal-form-checkbox__field">
 
 							<!-- Checkbox -->
 							<label for="whatsapp-checkbox" class="ms-3">
@@ -3996,7 +3996,7 @@
 
 						<!-- Telegram -->
 						<div class="d-flex align-items-center modal-form-checkbox mt-sm-0 mt-2">
-							<input type="checkbox" name="telegram-checkbox" id="telegram-checkbox" class="modal-form-checkbox__field">
+							<input type="radio" name="social-radio" id="telegram-checkbox" class="modal-form-checkbox__field">
 
 							<!-- Checkbox -->
 							<label for="telegram-checkbox" class="ms-3">
