--- a/SDS/index.html
+++ b/SDS/index.html
@@ -241,7 +241,7 @@
 								<div class="section-b-item-content__info btn ms-md-4 ms-2">40.000 ₸</div>
 
 								<!-- Info -->
-								<button type="button" class="btn filled ms-md-4 ms-2">подробнее</button>
+								<button type="button" class="btn filled ms-md-4 ms-2">Подробнее</button>
 							</div>
 						</div>
 					</div>
@@ -286,7 +286,7 @@
 								<div class="section-b-item-content__info btn ms-md-4 ms-2">40.000 ₸</div>
 
 								<!-- Info -->
-								<button type="button" class="btn filled ms-md-4 ms-2">подробнее</button>
+								<button type="button" class="btn filled ms-md-4 ms-2">Подробнее</button>
 							</div>
 						</div>
 					</div>
@@ -331,7 +331,7 @@
 								<div class="section-b-item-content__info btn ms-md-4 ms-2">40.000 ₸</div>
 
 								<!-- Info -->
-								<button type="button" class="btn filled ms-md-4 ms-2">подробнее</button>
+								<button type="button" class="btn filled ms-md-4 ms-2">Подробнее</button>
 							</div>
 						</div>
 					</div>
@@ -339,7 +339,7 @@
 			</div>
 
 			<!-- More button -->
-			<button type="button" class="section-b-more-btn btn filled" data-aos="fade-up">больше мероприятий</button>
+			<button type="button" class="section-b-more-btn btn filled" data-aos="fade-up">Больше мероприятий</button>
 		</div>
 	</section>
 
@@ -384,7 +384,7 @@
 						<p class="section-c-column__text">Добро пожаловать в нашу школу личного развития!</p>
 
 						<!-- Btn -->
-						<button type="button" class="btn filled section-c-column__btn open-modal-btn" target="get-partners">узнать подробнее</button>
+						<button type="button" class="btn filled section-c-column__btn open-modal-btn" target="get-partners">Узнать подробнее</button>
 					</div>
 				</div>
 
@@ -399,7 +399,7 @@
 						<p class="section-c-column__text">Добро пожаловать в нашу школу личного развития!</p>
 
 						<!-- Btn -->
-						<a href="#" class="btn filled section-c-column__btn">узнать подробнее</a>
+						<a href="#" class="btn filled section-c-column__btn">Узнать подробнее</a>
 					</div>
 				</div>
 
@@ -414,7 +414,7 @@
 						<p class="section-c-column__text">Добро пожаловать в нашу школу личного развития! Добро пожаловать в нашу школу личного развития! Добро пожаловать в нашу школу личного развития!</p>
 
 						<!-- Btn -->
-						<a href="#" class="btn filled section-c-column__btn">узнать подробнее</a>
+						<a href="#" class="btn filled section-c-column__btn">Узнать подробнее</a>
 					</div>
 				</div>
 
@@ -441,7 +441,7 @@
 						<p class="section-c-column__text">Добро пожаловать в нашу школу личного развития! Добро пожаловать в нашу школу личного развития! Добро пожаловать в нашу школу личного развития!</p>
 
 						<!-- Btn -->
-						<a href="#" class="btn filled section-c-column__btn">подать заявку</a>
+						<a href="#" class="btn filled section-c-column__btn">Подать заявку</a>
 					</div>
 				</div>
 			</div>
