Updata home page 2

--- a/AppleGold/index.html
+++ b/AppleGold/index.html
@@ -967,6 +967,54 @@
 		</div>
 	</nav>
 
+	<!--! Bottom navigation -->
+	<nav class="bottom-nav">
+		<!-- Item -->
+		<a href="#" class="bottom-nav-item">
+			<!-- Icon -->
+			<img src="img/bottom_nav1.svg" alt="" class="bottom-nav-item__icon">
+
+			<!-- Title -->
+			<span class="bottom-nav-item__title">главная</span>
+		</a>
+
+		<!-- Item -->
+		<a href="#" class="bottom-nav-item">
+			<!-- Icon -->
+			<img src="img/bottom_nav2.svg" alt="каталог" class="bottom-nav-item__icon">
+
+			<!-- Title -->
+			<span class="bottom-nav-item__title">каталог</span>
+		</a>
+
+		<!-- Item -->
+		<a href="#" class="bottom-nav-item">
+			<!-- Icon -->
+			<img src="img/bottom_nav3.svg" alt="корзина" class="bottom-nav-item__icon">
+
+			<!-- Title -->
+			<span class="bottom-nav-item__title">корзина</span>
+		</a>
+
+		<!-- Item -->
+		<a href="#" class="bottom-nav-item">
+			<!-- Icon -->
+			<img src="img/bottom_nav4.svg" alt="избранное" class="bottom-nav-item__icon">
+
+			<!-- Title -->
+			<span class="bottom-nav-item__title">избранное</span>
+		</a>
+
+		<!-- Item -->
+		<a href="#" class="bottom-nav-item">
+			<!-- Icon -->
+			<img src="img/bottom_nav5.svg" alt="профиль" class="bottom-nav-item__icon">
+
+			<!-- Title -->
+			<span class="bottom-nav-item__title">профиль</span>
+		</a>
+	</div>
+
 	<!--! Modals -->
 	<div class="modal" id="feedback-modal">
 		<!-- Inner -->
