Update most pages

--- a/AppleGold/index.html
+++ b/AppleGold/index.html
@@ -1013,7 +1013,7 @@
 			<!-- Title -->
 			<span class="bottom-nav-item__title">профиль</span>
 		</a>
-	</div>
+	</nav>
 
 	<!--! Modals -->
 	<div class="modal" id="feedback-modal">
